# Bike_Sharing_Demand_Prediction

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  artifacts.dvc  data.dvc  dvc.yaml  notes_and_references.txt  params.yaml  pyproject.toml  requirements.txt  requirements_docker.txt  streamlit_app.py  test.ipynb
.dvc/: config
.github/workflows/: aws.yaml
data/processed/: bike_sharing_data_processed.csv
src/components/: data_ingestion.py  data_preprocessing.py  data_splitter.py  data_validation.py  feature_cleaning.py  feature_engineering.py  feature_scaling.py  model_evaluation.py  model_prediction.py  model_training.py  test_model_training.py
src/utils/: aws_config.py  config.py  data_fetcher.py  data_loader.py  data_saver.py  data_splitter.py  logger.py  params.py  predictor.py
