[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bike_sharing_demand_prediction"
version = "0.1.0"
description = "An end-to-end ML project: Bike Sharing Demand Prediction with DVC, MLflow, FastAPI, Streamlit, Docker, and AWS deployment."
authors = [
    { name="Dinesh Kumar Verma", email="vermadinesh006@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.22.0",
    "scikit-learn>=1.1.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.2",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "streamlit>=1.24.0",
    "dvc[s3]>=3.0.0",
    "mlflow>=2.3.0",
    "boto3>=1.26.0",
    "pydantic>=2.0",
    "joblib>=1.2.0",
    "gdown>=4.7.1",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "black>=23.0",
    "flake8>=6.0.0",
    "mypy>=1.2.0",
    "pre-commit>=3.3.0",
    "pytest>=7.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = 3.8
ignore_missing_imports = true
